--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -22,15 +22,15 @@ ul {
     background: #fff;
     border: 1px solid #999;
     float: left;
-    font-size: 24px;
+    font-size: 6rem;
     font-weight: bold;
     line-height: 34px;
-    height: 34px;
+    height: 7rem;
     margin-right: -1px;
     margin-top: -1px;
     padding: 0;
     text-align: center;
-    width: 34px;
+    width: 7rem;
 }
 
 .square:focus {
